fixed smoke positioning on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -61,10 +61,23 @@ body {
     background: #ffffff;
     border: none;
     border-radius: 1000px;
-    transition: all 0.3s ease-in-out 0s;
     cursor: pointer;
     outline: none;
     padding: 10px;
+    animation: pulse 2.5s ease infinite;
+}
+
+@keyframes pulse {
+    0% {
+        -webkit-box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.4);
+        -moz-box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.4);
+        box-shadow: 0 0 0 0px rgba(255, 255, 255, 0.4);
+    }
+    100% {
+        -webkit-box-shadow: 0 0 0 20px rgba(255, 255, 255, 0);
+        -moz-box-shadow: 0 0 0 20px rgba(255, 255, 255, 0);
+        box-shadow: 0 0 0 20px rgba(255, 255, 255, 0);
+    }
 }
 
 .earth-canvas {
@@ -91,7 +104,7 @@ body {
 }
 
 .rocket {
-    z-index: 1;
+    z-index: 3;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -120,10 +133,10 @@ body {
 }
 
 .rocket-smoke {
-    z-index: 3;
+    z-index: 5;
     position: absolute;
-    top: 50%;
+    top: 78%;
     left: 50%;
-    transform: translate(-50%, -22%) rotate(180deg);
+    transform: translate(-50%, -50%) rotate(180deg);
     opacity: 0;
 }
